--- a/back-end/.project
+++ b/back-end/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ExpenseManagerAPI</name>
+	<name>VacationManagerAPI</name>
 	<comment></comment>
 	<projects>
 	</projects>
