--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.expenseManager</groupId>
-	<artifactId>ExpenseManagerAPI</artifactId>
+	<groupId>com.vacationManager</groupId>
+	<artifactId>VacationManagerAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ExpenseManagerAPI</name>
+	<name>VacationManagerAPI</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
