--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.2.0",
     "react-modal": "^3.2.1",
     "react-router-dom": "^4.2.2",
